tests/shouldFail/j012.c
int main(void) {
	int x;
	int* p = &x;
	*p;
	return 0;
}
